# core-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/voucherify_core_mcp/: __init__.py  client.py  main.py  pagination.py  server.py
tests/: prepare_project.py  scenario_1_basic_scenarios.py  scenario_2_products.py  scenario_3_customers.py  scenario_4_camp_summary.py  scenario_5_get_best_deals.py  scenario_6_estimate_loyalty_points.py  scenario_7_list_customers.py  scenario_8_list_vouchers.py  test_utils.py
